# portage

dev-lang/python/: Manifest  python-2.7.15.ebuild  python-2.7.16.ebuild  python-3.5.7.ebuild  python-3.6.8.ebuild  python-3.9.1-r1.ebuild
dev-lang/python/files/: python-2.7.16-jackpal.patch  python-3.6.8-jackpal.patch
dev-libs/xbyak_aarch64/: Manifest  xbyak_aarch64-0.9.0.ebuild  xbyak_aarch64-9999.ebuild
dev-libs/xbyak_aarch64/files/: xbyak_aarch64-0.9.0-Makefile.patch
metadata/: layout.conf
profiles/: repo_name
sys-apps/fakechroot/: Manifest  fakechroot-9999.ebuild
sys-apps/fakeroot/: Manifest  fakeroot-1.23.ebuild
sys-libs/termux-exec/: Manifest  termux-exec-0.8.ebuild  termux-exec-9999.ebuild
sys-libs/termux-exec/files/: termux-exec-0.8-autotools.patch  termux-exec-0.8-gentoo-prefix.patch  termux-exec-0.8-posix_spawn.patch  termux-exec-0.8-test.patch
sys-libs/termux-exec/files/termux-exec-0.8/: Makefile.am  configure.ac  execv.c  execvpe.c
